# al-baqarah-compose

./: .gitignore  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  colr_parser.cpp  colr_parser.h  glyph_extractor.cpp  glyph_extractor.h  jni_bridge.cpp  procedural_frame.inl  sdf_gen.cpp  sdf_gen.h  stb_truetype_impl.cpp  vk_renderer.cpp  vk_renderer.h
app/src/main/cpp/cmake/: embed_spirv.cmake
app/src/main/cpp/shaders/: outline.frag  outline.vert  textured.frag  textured.vert
app/src/main/kotlin/com/example/baqarah/: BaqarahApp.kt  MainActivity.kt
app/src/main/kotlin/com/example/baqarah/data/: AyahCache.kt  AyahPlanner.kt  FontRepository.kt  GlyphAtlas.kt  Models.kt  QuranApi.kt  QuranRepository.kt  SettingsRepository.kt  Surahs.kt
app/src/main/kotlin/com/example/baqarah/ui/: AyahPlanner.kt  BaqarahScreen.kt  BaqarahViewModel.kt  LegacyAyahText.kt  QuranScreen.kt  SettingsSheet.kt  SurahViewModel.kt  Theme.kt  V5AyahText.kt
app/src/main/kotlin/com/example/baqarah/vk/: AyahSdfBuilder.kt  MushafContent.kt  NativeRenderer.kt  ReaderActivity.kt  VulkanCanvasView.kt  VulkanDebugActivity.kt
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
gradle/: libs.versions.toml
tools/frame_eval/: .gitignore  Makefile  README.md  diff_grids.py  per_corner_best.py  render_target.py  score_seeds.py  slot_breakdown.py  target_grid.txt  test_frame.cpp
